Revert "Rebase from 'upstream'"
This reverts commit 286932da214ca938cdcefd28727dcc5676965ea9.