@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.StringTokenizer;
 
-import org.opencv.engine.HardwareDetector;
 import org.opencv.engine.MarketConnector;
 import org.opencv.engine.OpenCVEngineInterface;
 import org.opencv.engine.R;
@@ -18,7 +17,6 @@ import android.content.Intent;
 import android.content.IntentFilter;
 import android.content.ServiceConnection;
 import android.content.pm.PackageInfo;
-import android.content.pm.PackageManager.NameNotFoundException;
 import android.os.Build;
 import android.os.Bundle;
 import android.os.IBinder;
@@ -41,337 +39,274 @@ public class ManagerActivity extends Activity
     public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.main);
-
+        
         TextView OsVersionView = (TextView)findViewById(R.id.OsVersionValue);
         OsVersionView.setText(Build.VERSION.CODENAME + " (" + Build.VERSION.RELEASE + "), API " + Build.VERSION.SDK_INT);
-
-        try {
-            PackageInfo packageInfo = getPackageManager().getPackageInfo(this.getPackageName(), 0);
-            ManagerVersion = packageInfo.versionName;
-        } catch (NameNotFoundException e) {
-            ManagerVersion = "N/A";
-            e.printStackTrace();
-        }
-
+        
         mInstalledPackageView = (ListView)findViewById(R.id.InstalledPackageList);
-
+        
         mMarket = new MarketConnector(this);
-
-        mInstalledPacksAdapter = new PackageListAdapter(
-                this,
-                mListViewItems,
-                R.layout.info,
-                new String[] {"Name", "Version", "Hardware", "Activity"},
-                new int[] {R.id.InfoName,R.id.InfoVersion, R.id.InfoHardware}
-                );
-
+        
+        mInstalledPacksAdapter = new SimpleAdapter(
+        	    this,
+        	    mListViewItems,
+        	    R.layout.info,
+        	    new String[] {"Name", "Version", "Hardware"},
+        	    new int[] {R.id.InfoName,R.id.InfoVersion, R.id.InfoHardware}
+        	    );
+        
         mInstalledPackageView.setAdapter(mInstalledPacksAdapter);
-
+        
         TextView HardwarePlatformView = (TextView)findViewById(R.id.HardwareValue);
         int Platfrom = HardwareDetector.DetectKnownPlatforms();
         int CpuId = HardwareDetector.GetCpuID();
-
+        
         if (HardwareDetector.PLATFORM_UNKNOWN != Platfrom)
         {
-            if (HardwareDetector.PLATFORM_TEGRA == Platfrom)
-            {
-                HardwarePlatformView.setText("Tegra");
-            }
-            else if (HardwareDetector.PLATFORM_TEGRA == Platfrom)
-            {
-                HardwarePlatformView.setText("Tegra 2");
-            }
-            else
-            {
-                HardwarePlatformView.setText("Tegra 3");
-            }
+        	if (HardwareDetector.PLATFORM_TEGRA == Platfrom)
+        	{
+        		HardwarePlatformView.setText("Tegra");
+        	}
+        	else if (HardwareDetector.PLATFORM_TEGRA == Platfrom)
+        	{
+        		HardwarePlatformView.setText("Tegra 2");
+        	}
+        	else
+        	{
+        		HardwarePlatformView.setText("Tegra 3");
+        	}
         }
         else
         {
-            if ((CpuId & HardwareDetector.ARCH_X86) == HardwareDetector.ARCH_X86)
-            {
-                HardwarePlatformView.setText("x86 " + JoinIntelFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_X64) == HardwareDetector.ARCH_X64)
-            {
-                HardwarePlatformView.setText("x64 " + JoinIntelFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_ARMv5) == HardwareDetector.ARCH_ARMv5)
-            {
-                HardwarePlatformView.setText("ARM v5 " + JoinArmFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_ARMv6) == HardwareDetector.ARCH_ARMv6)
-            {
-                HardwarePlatformView.setText("ARM v6 " + JoinArmFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_ARMv7) == HardwareDetector.ARCH_ARMv7)
-            {
-                HardwarePlatformView.setText("ARM v7 " + JoinArmFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_ARMv8) == HardwareDetector.ARCH_ARMv8)
-            {
-                HardwarePlatformView.setText("ARM v8 " + JoinArmFeatures(CpuId));
-            }
-            else if ((CpuId & HardwareDetector.ARCH_MIPS) == HardwareDetector.ARCH_MIPS)
-            {
-                HardwarePlatformView.setText("MIPS");
-            }
-            else
-            {
-                HardwarePlatformView.setText("not detected");
-            }
+        	if ((CpuId & HardwareDetector.ARCH_X86) == HardwareDetector.ARCH_X86) 
+        	{
+        		HardwarePlatformView.setText("x86 " + JoinIntelFeatures(CpuId));
+        	}
+        	else if ((CpuId & HardwareDetector.ARCH_X64) == HardwareDetector.ARCH_X64)
+        	{
+        		HardwarePlatformView.setText("x64 " + JoinIntelFeatures(CpuId));
+        	}
+        	else if ((CpuId & HardwareDetector.ARCH_ARMv5) == HardwareDetector.ARCH_ARMv5)
+        	{
+        		HardwarePlatformView.setText("ARM v5 " + JoinArmFeatures(CpuId));
+        	}
+        	else if ((CpuId & HardwareDetector.ARCH_ARMv6) == HardwareDetector.ARCH_ARMv6)
+        	{
+        		HardwarePlatformView.setText("ARM v6 " + JoinArmFeatures(CpuId));
+        	}
+        	else if ((CpuId & HardwareDetector.ARCH_ARMv7) == HardwareDetector.ARCH_ARMv7)
+        	{
+        		HardwarePlatformView.setText("ARM v7 " + JoinArmFeatures(CpuId));
+        	}
+        	else if ((CpuId & HardwareDetector.ARCH_ARMv8) == HardwareDetector.ARCH_ARMv8)
+        	{
+        		HardwarePlatformView.setText("ARM v8 " + JoinArmFeatures(CpuId));
+        	}
+        	else
+        	{
+        		HardwarePlatformView.setText("not detected");
+        	}
         }
-
+        
         mUpdateEngineButton = (Button)findViewById(R.id.CheckEngineUpdate);
         mUpdateEngineButton.setOnClickListener(new OnClickListener() {
-
-            public void onClick(View v) {
-                if (!mMarket.InstallAppFromMarket("org.opencv.engine"))
-                {
-                    Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
-                    toast.show();
-                }
-            }
-        });
-
+			
+			public void onClick(View v) {
+				if (!mMarket.InstallAppFromMarket("org.opencv.engine"))
+				{
+					Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
+					toast.show();
+				}
+			}
+		});
+        
         mActionDialog = new AlertDialog.Builder(this).create();
-
+        
         mActionDialog.setTitle("Choose action");
         mActionDialog.setButton("Update", new DialogInterface.OnClickListener() {
-
-            public void onClick(DialogInterface dialog, int which) {
-                int index = (Integer)mInstalledPackageView.getTag();
-                if (!mMarket.InstallAppFromMarket(mInstalledPackageInfo[index].packageName))
-                {
-                    Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
-                    toast.show();
-                }
-            }
-        });
-
+			
+			public void onClick(DialogInterface dialog, int which) {
+				int index = (Integer)mInstalledPackageView.getTag();
+				if (!mMarket.InstallAppFromMarket(mInstalledPackageInfo[index].packageName))
+				{
+					Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
+					toast.show();
+				}
+			}
+		});
+        
         mActionDialog.setButton3("Remove", new DialogInterface.OnClickListener() {
-
-            public void onClick(DialogInterface dialog, int which) {
-                int index = (Integer)mInstalledPackageView.getTag();
-                if (!mMarket.RemoveAppFromMarket(mInstalledPackageInfo[index].packageName, true))
-                {
-                    Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
-                    toast.show();
-                }
-            }
-        });
-
+			
+			public void onClick(DialogInterface dialog, int which) {
+				int index = (Integer)mInstalledPackageView.getTag();
+				if (!mMarket.RemoveAppFromMarket(mInstalledPackageInfo[index].packageName, true))
+				{
+					Toast toast = Toast.makeText(getApplicationContext(), "Google Play is not avaliable", Toast.LENGTH_SHORT);
+					toast.show();
+				}				
+			}
+		});
+        
         mActionDialog.setButton2("Return", new DialogInterface.OnClickListener() {
-
-            public void onClick(DialogInterface dialog, int which) {
-                // nothing
-            }
-        });
-
+			
+			public void onClick(DialogInterface dialog, int which) {
+				// nothing
+			}
+		});
+        
         mInstalledPackageView.setOnItemClickListener(new OnItemClickListener() {
 
-            public void onItemClick(AdapterView<?> arg0, View arg1, int arg2, long id) {
-                mInstalledPackageView.setTag(Integer.valueOf((int)id));
-                mActionDialog.show();
-            }
+			public void onItemClick(AdapterView<?> arg0, View arg1, int arg2, long id) {
+				
+		        mInstalledPackageView.setTag(new Integer((int)id));
+		        mActionDialog.show();
+			}		
         });
-
+        
+        if (!bindService(new Intent("org.opencv.engine.BIND"), mServiceConnection, Context.BIND_AUTO_CREATE))
+        {
+        	TextView EngineVersionView = (TextView)findViewById(R.id.EngineVersionValue);
+        	EngineVersionView.setText("not avaliable");
+        }
+        
         IntentFilter filter = new IntentFilter();
         filter.addAction(Intent.ACTION_PACKAGE_ADDED);
         filter.addAction(Intent.ACTION_PACKAGE_CHANGED);
         filter.addAction(Intent.ACTION_PACKAGE_INSTALL);
         filter.addAction(Intent.ACTION_PACKAGE_REMOVED);
         filter.addAction(Intent.ACTION_PACKAGE_REPLACED);
-
+        
         registerReceiver(mPackageChangeReciever, filter);
     }
-
+    
     @Override
     protected void onDestroy() {
-        super.onDestroy();
-        unregisterReceiver(mPackageChangeReciever);
+    	super.onDestroy();
+    	unregisterReceiver(mPackageChangeReciever);
     }
-
+    
     @Override
     protected void onResume() {
-        super.onResume();
-        Log.d(TAG, "Filling package list on resume");
-        if (!bindService(new Intent("org.opencv.engine.BIND"), new OpenCVEngineServiceConnection(), Context.BIND_AUTO_CREATE))
-        {
-            TextView EngineVersionView = (TextView)findViewById(R.id.EngineVersionValue);
-            EngineVersionView.setText("not avaliable");
-        }
+    	super.onResume();
+    	FillPackageList();
     }
-
+    
     protected SimpleAdapter mInstalledPacksAdapter;
     protected ListView mInstalledPackageView;
     protected Button mUpdateEngineButton;
     protected PackageInfo[] mInstalledPackageInfo;
-    protected final ArrayList<HashMap<String,String>> mListViewItems = new ArrayList<HashMap<String,String>>();
-    protected static final String TAG = "OpenCV_Manager/Activity";
+    protected static final ArrayList<HashMap<String,String>> mListViewItems = new ArrayList<HashMap<String,String>>();
     protected MarketConnector mMarket;
-    protected AlertDialog mActionDialog;
-    protected HashMap<String,String> mActivePackageMap = new HashMap<String, String>();
-    protected int ManagerApiLevel = 0;
-    protected String ManagerVersion;
-
+    AlertDialog mActionDialog;
+    
     protected BroadcastReceiver mPackageChangeReciever = new BroadcastReceiver() {
+		
+		@Override
+		public void onReceive(Context context, Intent intent) {
+			Log.d("OpenCV Manager/Reciever", "Bradcast message " + intent.getAction() + " reciever");
+			FillPackageList();
+		}
+	};
+    
+    protected ServiceConnection mServiceConnection = new ServiceConnection() {
+		
+		public void onServiceDisconnected(ComponentName name) {
+			// TODO Auto-generated method stub
+			
+		}
+		
+		public void onServiceConnected(ComponentName name, IBinder service) {
+			TextView EngineVersionView = (TextView)findViewById(R.id.EngineVersionValue);
+			OpenCVEngineInterface EngineService = OpenCVEngineInterface.Stub.asInterface(service);
+			try {
+				EngineVersionView.setText("" + EngineService.getEngineVersion());
+			} catch (RemoteException e) {
+				EngineVersionView.setText("not avaliable");
+				e.printStackTrace();
+			}
+			unbindService(mServiceConnection);
+		}
+	};
+	
+	protected void FillPackageList()
+	{
+        mInstalledPackageInfo = mMarket.GetInstalledOpenCVPackages();
+        mListViewItems.clear();
+        
+        for (int i = 0; i < mInstalledPackageInfo.length; i++)
+        {
+        	// Convert to Items for package list view
+        	HashMap<String,String> temp = new HashMap<String,String>();
+        	temp.put("Name", mMarket.GetApplicationName(mInstalledPackageInfo[i].applicationInfo));
 
-        @Override
-        public void onReceive(Context context, Intent intent) {
-            Log.d("OpenCVManager/Reciever", "Bradcast message " + intent.getAction() + " reciever");
-            Log.d("OpenCVManager/Reciever", "Filling package list on broadcast message");
-            if (!bindService(new Intent("org.opencv.engine.BIND"), new OpenCVEngineServiceConnection(), Context.BIND_AUTO_CREATE))
+            int idx = 0;
+            String OpenCVersion = "unknown";
+            String HardwareName = "";
+            StringTokenizer tokenizer = new StringTokenizer(mInstalledPackageInfo[i].packageName, "_");
+            while (tokenizer.hasMoreTokens())
             {
-                TextView EngineVersionView = (TextView)findViewById(R.id.EngineVersionValue);
-                EngineVersionView.setText("not avaliable");
+            	if (idx == 1)
+            	{
+            		// version of OpenCV
+            		OpenCVersion = tokenizer.nextToken().substring(1);
+            	}
+            	else if (idx >= 2)
+            	{
+            		// hardware options
+            		HardwareName += tokenizer.nextToken() + " ";
+            	}
+            	else
+            	{
+            		tokenizer.nextToken();
+            	}
+            	idx++;
             }
+            
+        	temp.put("Version", NormalizeVersion(OpenCVersion, mInstalledPackageInfo[i].versionName));
+        	temp.put("Hardware", HardwareName);
+        	mListViewItems.add(temp);
         }
-    };
-
-    protected class OpenCVEngineServiceConnection implements ServiceConnection
-    {
-        public void onServiceDisconnected(ComponentName name) {
-            // TODO Auto-generated method stub
-
-        }
-
-        public void onServiceConnected(ComponentName name, IBinder service) {
-            OpenCVEngineInterface EngineService = OpenCVEngineInterface.Stub.asInterface(service);
-            try {
-                ManagerApiLevel = EngineService.getEngineVersion();
-            } catch (RemoteException e) {
-                e.printStackTrace();
-            }
-
-            TextView EngineVersionView = (TextView)findViewById(R.id.EngineVersionValue);
-            EngineVersionView.setText(ManagerVersion);
-
-            try {
-                String path = EngineService.getLibPathByVersion("2.4");
-                Log.d(TAG, "2.4 -> " + path);
-                mActivePackageMap.put("24", path);
-                path = EngineService.getLibPathByVersion("2.5");
-                Log.d(TAG, "2.5 -> " + path);
-                mActivePackageMap.put("25", path);
-            } catch (RemoteException e) {
-                // TODO Auto-generated catch block
-                e.printStackTrace();
-            }
-
-            Log.d(TAG, "Filling package list on service connection");
-            FillPackageList();
-
-            unbindService(this);
-        }
-    };
-
-    synchronized protected void FillPackageList()
-    {
-        synchronized (mListViewItems) {
-            mMarket.mIncludeManager = false;
-            mInstalledPackageInfo = mMarket.GetInstalledOpenCVPackages();
-            mListViewItems.clear();
-
-            for (int i = 0; i < mInstalledPackageInfo.length; i++)
-            {
-                // Convert to Items for package list view
-                HashMap<String,String> temp = new HashMap<String,String>();
-                String PublicName = mMarket.GetApplicationName(mInstalledPackageInfo[i].applicationInfo);
-
-                int idx = 0;
-                String OpenCVersion = "unknown";
-                String HardwareName = "";
-                StringTokenizer tokenizer = new StringTokenizer(mInstalledPackageInfo[i].packageName, "_");
-                while (tokenizer.hasMoreTokens())
-                {
-                    if (idx == 1)
-                    {
-                        // version of OpenCV
-                        OpenCVersion = tokenizer.nextToken().substring(1);
-                    }
-                    else if (idx >= 2)
-                    {
-                        // hardware options
-                        HardwareName += tokenizer.nextToken() + " ";
-                    }
-                    else
-                    {
-                        tokenizer.nextToken();
-                    }
-                    idx++;
-                }
-
-                String ActivePackagePath;
-                ActivePackagePath = mActivePackageMap.get(OpenCVersion);
-                Log.d(TAG, OpenCVersion + " -> " + ActivePackagePath);
-
-                if (null != ActivePackagePath)
-                {
-                    int start = ActivePackagePath.indexOf(mInstalledPackageInfo[i].packageName);
-                    int stop = start + mInstalledPackageInfo[i].packageName.length();
-                    if (start >= 0 && ActivePackagePath.charAt(stop) == '/')
-                    {
-                        temp.put("Activity", "y");
-                        PublicName += " (in use)";
-                    }
-                    else
-                    {
-                        temp.put("Activity", "n");
-                    }
-                }
-                else
-                {
-                    temp.put("Activity", "n");
-                }
-
-                temp.put("Name", PublicName);
-                temp.put("Version", NormalizeVersion(OpenCVersion, mInstalledPackageInfo[i].versionName));
-                temp.put("Hardware", HardwareName);
-                mListViewItems.add(temp);
-            }
-
-            mInstalledPacksAdapter.notifyDataSetChanged();
-        }
-    }
-
-    protected String NormalizeVersion(String OpenCVersion, String PackageVersion)
-    {
-        int dot = PackageVersion.indexOf(".");
-        return OpenCVersion.substring(0,  OpenCVersion.length()-1) + "." +
-            OpenCVersion.toCharArray()[OpenCVersion.length()-1] + "." +
-            PackageVersion.substring(0, dot) + " rev " + PackageVersion.substring(dot+1);
-    }
-
+        
+        mInstalledPacksAdapter.notifyDataSetChanged();
+	}
+    
+	protected String NormalizeVersion(String OpenCVersion, String PackageVersion)
+	{
+		int dot = PackageVersion.indexOf(".");
+		return OpenCVersion.substring(0,  OpenCVersion.length()-1) + "." + 
+			OpenCVersion.toCharArray()[OpenCVersion.length()-1] + "." + 
+			PackageVersion.substring(0, dot) + " rev " + PackageVersion.substring(dot+1);		
+	}
+	
     protected String ConvertPackageName(String Name, String Version)
     {
-        return Name + " rev " + Version;
+    	return Name + " rev " + Version;
     }
-
+    
     protected String JoinIntelFeatures(int features)
     {
-        // TODO: update if package will be published
-        return "";
+    	// TODO: update if package will be published
+    	return "";
     }
-
+    
     protected String JoinArmFeatures(int features)
     {
-        // TODO: update if package will be published
-        if ((features & HardwareDetector.FEATURES_HAS_NEON) == HardwareDetector.FEATURES_HAS_NEON)
-        {
-            return "with Neon";
-        }
-        else if ((features & HardwareDetector.FEATURES_HAS_VFPv3) == HardwareDetector.FEATURES_HAS_VFPv3)
-        {
-            return "with VFP v3";
-        }
-        else if ((features & HardwareDetector.FEATURES_HAS_VFPv3d16) == HardwareDetector.FEATURES_HAS_VFPv3d16)
-        {
-            return "with VFP v3d16";
-        }
-        else
-        {
-            return "";
-        }
+    	// TODO: update if package will be published
+    	if ((features & HardwareDetector.FEATURES_HAS_NEON) == HardwareDetector.FEATURES_HAS_NEON)
+    	{
+    		return "with Neon";
+    	}
+    	else if ((features & HardwareDetector.FEATURES_HAS_VFPv3) == HardwareDetector.FEATURES_HAS_VFPv3)
+    	{
+    		return "with VFP v3";
+    	}
+    	else if ((features & HardwareDetector.FEATURES_HAS_VFPv3d16) == HardwareDetector.FEATURES_HAS_VFPv3d16)
+    	{
+    		return "with VFP v3d16";
+    	}
+    	else
+    	{
+    		return "";
+    	}
     }
 }
